--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
+  #mapper映射文件
   type-aliases-package: com.sky.entity
   configuration:
     #开启驼峰命名
@@ -33,7 +34,7 @@ sky:
   jwt:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itcast
-    # 设置jwt过期时间
+    # 设置jwt过期时间，单位为毫秒
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
