--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: 162278
+
+  alioss:
+    endpoint: oss-cn-chengdu.aliyuncs.com
+    access-key-id: LTAI5tNxR8kHuLWFaFm4bmVp
+    access-key-secret: N9krsMGMqtFoKUIDhbTCvvXmc7LU2w
+    bucket-name: practical-projects
