--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -12,3 +12,10 @@ sky:
     access-key-id: LTAI5tNxR8kHuLWFaFm4bmVp
     access-key-secret: N9krsMGMqtFoKUIDhbTCvvXmc7LU2w
     bucket-name: practical-projects
+
+  redis:
+    host: localhost
+    port: 6379
+    password: 162278
+    #数据库：有0-15共16个，默认0
+    database: 0
