--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -46,6 +46,10 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    #微信小程序端
+    user-secret-key: itheima
+    user-ttl: 7200000
+    user-token-name: authentication
 
   #阿里云
   alioss:
@@ -53,3 +57,8 @@ sky:
     access-key-id: ${sky.alioss.access-key-id}
     access-key-secret: ${sky.alioss.access-key-secret}
     bucket-name: ${sky.alioss.bucket-name}
+
+  #微信小程序开发账号
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
