--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,10 @@
 .idea
 *.iml
 *.class
-*Test.java
-**/test/### Example user template template
+#*Test.java
+#**/test/### Example user template template
 ### Example user template
 
 # IntelliJ project files
 out
 gen
-
-/sky-server/src/test/
