订单支付功能（实现不了）

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <jjwt>0.9.1</jjwt>
         <jaxb-api>2.3.1</jaxb-api>
         <poi>3.16</poi>
+        <junit>4.12</junit>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -122,6 +123,13 @@
                 <groupId>com.github.wechatpay-apiv3</groupId>
                 <artifactId>wechatpay-apache-httpclient</artifactId>
                 <version>0.4.8</version>
+            </dependency>
+
+            <!--测试-->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
