查询历史订单、查询订单详情、订单相关、校验收货地址是否超出配送范围

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -62,3 +62,9 @@ sky:
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
+
+  #百度地图
+  shop:
+    address: ${sky.shop.address}
+  baidu:
+    ak: ${sky.shop.ak}
